new push testing

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <p>
               I am available on Facebook, Linkedin, GitHub,<br />
               and many more. In future any kinds of need you can<br />
-              contact me. There is some method below to reach me.
+              contact with me. There is some method below to reach me.
             </p>
             <br /><br />
             <p>Email : samiul@gmail.com</p>
